--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,21 @@
   /*outline : 1px solid red;*/
   font-family: 'Open Sans', sans-serif;
 }
+
+div .particles #particles-js{
+}
+
+
+.particles{
+    width: 100%;
+    height: 100vh%;
+    background-color: #b61924;
+    background-image: url('');
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+
 .spacer {
   margin:40px;
 }
