--- a/css/main.css
+++ b/css/main.css
@@ -4,17 +4,20 @@
 }
 
 div .particles #particles-js{
+
 }
 
 
 .particles{
     width: 100%;
-    height: 100vh%;
+    height: 100vh;
     background-color: #b61924;
     background-image: url('');
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
+    z-index: -99;
+    position:fixed;
 }
 
 .spacer {
@@ -160,7 +163,8 @@ a:hover{
 }
 
 #screen1{
-  background-color: #91dbff;
+  /*background-color: #91dbff;*/
+    /*opacity: .1;*/
 }
 #screen2{
   background-color: #d3cde2;
