--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ div .particles #particles-js{
 .particles{
     width: 100%;
     height: 100vh;
-    background-color: #b61924;
+    background-color: #3e65b6;
     background-image: url('');
     background-size: cover;
     background-position: 50% 50%;
@@ -167,7 +167,7 @@ a:hover{
     /*opacity: .1;*/
 }
 #screen2{
-  background-color: #d3cde2;
+  background-color: #64bee2;
   height:auto;
   float:left;
   width:100%;
