--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ div .particles #particles-js{
 
 #square4{
   background:
-    url('../img/scraper.png') top left;
+    url('../img/scraper3.png') top left;
 }
 
 #icon {
